- converted some java files to kotlin files - added error prone plugin